--- a/bbarntt.html
+++ b/bbarntt.html
@@ -8,5 +8,6 @@
        
 <body> 
         Bryce Barnett
+ I am currently enjoying learning to use Github & Git Bash. It is an extremely helpful tool. I also emjoy learning new management techniques for technical skills. Professor Colbert has been awesome!
       </body> 
     </html>
