Font set and hyperlink added

--- a/bbarntt.html
+++ b/bbarntt.html
@@ -10,7 +10,8 @@
         Bryce Barnett
 
         Hello World! 
-        
+
  I am currently enjoying learning to use Github & Git Bash. It is an extremely helpful tool. I also emjoy learning new management techniques for technical skills. Professor Colbert has been awesome!
       </body> 
     </html>
+<a href=”http://www.google.com”> Google </a> 
